# s3-tables-duckdb

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: perf-fragmented.md  perf-postcompaction.md
duckdb/: 01_setup.sql  02_query_basics.sql  03_time_travel.sql  04_writes.sql  05_local_to_cloud.sql
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  queries.js  styles.css
frontend/src/components/: LineChart.jsx  ResultTable.jsx
infrastructure/: .terraform.lock.hcl  artifacts.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3tables.tf  scheduler.tf  terraform.tfvars.example  variables.tf  versions.tf
ingester/src/: handler.py  iceberg_writer.py  openaq.py
ingester/tests/: conftest.py  test_handler.py  test_openaq.py
scripts/: bench.py  empty_tables.py  local_api.py  seed_local.py
